# FounderBench

./: .env.example  .gitignore  CITATION.cff  LICENSE-TODO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: QUICKSTART.md  RELEASE.md  SUBMISSIONS.md
outputs/: acceleratorbench-action-semantics-v0.3.md  acceleratorbench-baseline-analysis-v0.3.md  acceleratorbench-baseline-leaderboard-v0.3.json  acceleratorbench-baseline-raw-v0.3.json  acceleratorbench-citation-audit-v0.3.json  acceleratorbench-citation-audit-v0.3.md  acceleratorbench-claim-evidence-v0.3.json  acceleratorbench-completion-audit-v0.3.json  acceleratorbench-completion-audit-v0.3.md  acceleratorbench-contamination-leakage-audit-v0.3.json  acceleratorbench-datasheet-v0.3.md  acceleratorbench-determinism-audit-v0.3.md  acceleratorbench-difficulty-calibration-v0.3.json  acceleratorbench-difficulty-calibration-v0.3.md  acceleratorbench-environment-report-v0.3.md  acceleratorbench-experiment-matrix-v0.3.json  acceleratorbench-experiment-runbook-v0.3.json  acceleratorbench-experiment-runbook-v0.3.md  acceleratorbench-human-calibration-analysis-v0.3.md  acceleratorbench-human-calibration-packet-v0.3.json  acceleratorbench-human-calibration-protocol-v0.3.json  acceleratorbench-human-calibration-schema-v0.3.json  acceleratorbench-human-calibration-template-v0.3.json  acceleratorbench-leaderboard-policy-v0.3.md  acceleratorbench-local-openai-compatible-protocol-v0.3.json  acceleratorbench-market-catalog-v0.3.json  acceleratorbench-market-catalog-v0.3.md  acceleratorbench-metric-sensitivity-v0.3.json  acceleratorbench-metrics-and-evaluation.md  acceleratorbench-model-comparison-v0.3.json  acceleratorbench-model-comparison-v0.3.md  acceleratorbench-model-result-cards-v0.3.md  acceleratorbench-model-submission-schema-v0.3.md  acceleratorbench-paired-statistics-v0.3.json  acceleratorbench-paper-claim-lint-v0.3.md  acceleratorbench-paper-evidence-map-v0.3.json  acceleratorbench-paper-evidence-map-v0.3.md  acceleratorbench-paper-tables-v0.3.md  acceleratorbench-power-analysis-v0.3.json  acceleratorbench-power-analysis-v0.3.md  (+166 more)
paper/kdd2027/: README.md  REVIEW-WEAKNESS-RESPONSE.md  SUBMISSION-BLOCKERS.md  WRITING-REVISION-NOTES.md  analyze_results.py  appendix.tex  build_anonymous_overleaf.py  build_arxiv_package.py  build_dbtrack_overleaf.py  generate_figures.py  generate_tables.py  main.tex  table-baselines.tex  table-errors.tex  table-models.tex
paper/kdd2027/figures/: family-heatmap-data.json  leaderboard-data.csv
release/acceleratorbench-v0.3.0/: BUNDLE-INTEGRITY.json  BUNDLE-INTEGRITY.md  README.md  SHA256SUMS.json
release/acceleratorbench-v0.3.0/code/: CITATION.cff.template  LICENSE-TODO.md  README.md  SPEC.md
release/acceleratorbench-v0.3.0/outputs/: acceleratorbench-ablation-report-v0.3.md  acceleratorbench-action-ablation-v0.3.json  acceleratorbench-action-ablation-v0.3.md  acceleratorbench-baseline-execution-plan-v0.3.json  acceleratorbench-baseline-execution-plan-v0.3.md  acceleratorbench-benchmark-card.md  acceleratorbench-claim-evidence-v0.3.md  acceleratorbench-contamination-leakage-audit-v0.3.md  acceleratorbench-cost-accounting-v0.3.md  acceleratorbench-datasheet-v0.3.json  acceleratorbench-environment-report-v0.3.json  acceleratorbench-experiment-matrix-v0.3.md  acceleratorbench-failure-mode-audit-v0.3.json  acceleratorbench-failure-mode-audit-v0.3.md  acceleratorbench-human-calibration-packet-v0.3.md  acceleratorbench-human-calibration-protocol-v0.3.md  acceleratorbench-human-calibration-schema-v0.3.md  acceleratorbench-leaderboard-policy-v0.3.json  acceleratorbench-leaderboard-stability-v0.3.json  acceleratorbench-paper-tables-v0.3.json  (+46 more)
release/founderbench/: BUNDLE-INTEGRITY.json  BUNDLE-INTEGRITY.md  CITATION.cff  README.md  SHA256SUMS.json
work/founderbench/: LICENSE  LICENSE.template  README.md  SPEC.md  bench_all.py  make_demo.py
work/moneybench/: CITATION.cff  CITATION.cff.template  LICENSE.template  README.md  SPEC.md  bench_all.py  make_demo.py
(+332 files in other folders)
