[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "founderbench"
version = "0.3.0"
description = "FounderBench: evaluating LLM agents on sequential startup decisions under bounded resources."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yufeng Wang", email = "louiswang524@gmail.com" }
]
license = { text = "MIT" }
keywords = ["llm", "agents", "benchmark", "startup", "evaluation", "simulator", "sequential-decision-making"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/louiswang524/FounderBench"
Repository = "https://github.com/louiswang524/FounderBench"
Issues = "https://github.com/louiswang524/FounderBench/issues"

[project.scripts]
founderbench-release = "founderbench.release:main"
founderbench-task = "founderbench.task_cli:main"
founderbench-runner = "founderbench.resumable_runner:main"
founderbench-local-model = "founderbench.local_model:main"

[tool.setuptools]
package-dir = { "" = "work/founderbench" }

[tool.setuptools.packages.find]
where = ["work/founderbench"]
include = ["founderbench*"]

